<resources>
    <string name="app_name">Adidas Events</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_up">Send registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_birthdate_required">Date of birth field is required</string>
    <string name="error_country_required">Country fields is required</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_birthdate">Date of birth</string>
    <string name="prompt_country">Country</string>
    <string name="select_birthdate">Select birthdate</string>
    <string name="select_country">Select your country:</string>
    <string name="error_min_chars">At least 3 chars in this field</string>
    <string name="ok">Ok</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="sgin_up_for_event">JOIN THE EVENT</string>
    <string name="join_event">Join the event</string>
    <string name="no_connected">The device has no connection to internet</string>
    <string name="load_again">Try to load the data again</string>
    <string name="register_again">Do you want to register someone else?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
